--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -17,7 +16,7 @@
   <body>
     <main class="container">
       <div class="sedans">
-        <img src="images/icon-sedans.svg" alt="Sedans">
+        <img src="images/icon-sedans.svg" alt="Sedans" />
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal
           for cruising in the city or on your next road trip.
@@ -25,7 +24,7 @@
         <button class="learn">Learn More</button>
       </div>
       <div class="SUVs">
-        <img src="images/icon-suvs.svg" alt="SUV">
+        <img src="images/icon-suvs.svg" alt="SUV" />
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect
           for your next family vacation and off-road adventures.
@@ -33,7 +32,7 @@
         <button class="learn">Learn More</button>
       </div>
       <div class="Luxury">
-        <img src="images/icon-luxury.svg" alt="Luxury">
+        <img src="images/icon-luxury.svg" alt="Luxury" />
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the
           enhanced comfort of a luxury rental and arrive in style.
@@ -41,12 +40,12 @@
         <button class="learn">Learn More</button>
       </div>
     </main>
-
-    <div class="attribution">
+    <footer>
+          <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </footer>
   </body>
 </html>
