--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="style.css">
     <link
       rel="icon"
       type="image/png"
@@ -17,6 +17,7 @@
     <main class="container">
       <div class="sedans">
         <img src="images/icon-sedans.svg" alt="Sedans" />
+        <h1>Sedans</h1>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal
           for cruising in the city or on your next road trip.
@@ -25,6 +26,7 @@
       </div>
       <div class="SUVs">
         <img src="images/icon-suvs.svg" alt="SUV" />
+        <h1>SUVs</h1>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect
           for your next family vacation and off-road adventures.
@@ -33,6 +35,7 @@
       </div>
       <div class="Luxury">
         <img src="images/icon-luxury.svg" alt="Luxury" />
+        <h1>Luxury</h1>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the
           enhanced comfort of a luxury rental and arrive in style.
