Mise en place des Cards

--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
   </head>
   <body>
     <main class="container">
-      <div class="sedans">
+      <div class="card" id="sedans">
         <img src="images/icon-sedans.svg" alt="Sedans" />
         <h1>Sedans</h1>
-        <p>
-          Choose a sedan for its affordability and excellent fuel economy. Ideal
-          for cruising in the city or on your next road trip.
-        </p>
+        <p>Choose a sedan for its affordability and excellent fuel economy. Ideal
+          for cruising in the city or on your next road trip.</p>
         <button class="learn">Learn More</button>
       </div>
-      <div class="SUVs">
+      <div class="card" id="suvs">
         <img src="images/icon-suvs.svg" alt="SUV" />
         <h1>SUVs</h1>
         <p>
@@ -33,7 +31,7 @@
         </p>
         <button class="learn">Learn More</button>
       </div>
-      <div class="Luxury">
+      <div class="card" id="luxury">
         <img src="images/icon-luxury.svg" alt="Luxury" />
         <h1>Luxury</h1>
         <p>
