--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
   <body>
+    <header></header>
     <main class="container">
       <div class="card" id="sedans">
         <img src="images/icon-sedans.svg" alt="Sedans" />
